--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "github": "0.2.3",
     "httpdispatcher": "0.4.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "open": "0.0.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
