fix(open): change open to dependency, and not devDependency.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "github": "0.2.3",
-    "httpdispatcher": "0.4.0"
-  },
-  "devDependencies": {
+    "httpdispatcher": "0.4.0",
     "open": "0.0.5"
   },
   "scripts": {
