--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "github": "0.2.3",
-    "httpdispatcher": "0.4.0",
-    "open": "0.0.5"
+    "httpdispatcher": "0.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
