--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "httpdispatcher": "0.4.0"
   },
   "devDependencies": {
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "gulp-minify-css": "1.0.0",
+    "gulp-plumber": "1.0.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "1.3.3",
+    "gulp": "3.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
