--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,11 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
+    "angular": "~1.4.7",
+    "animate.css": "animate-css#~3.4.0",
     "bootstrap": "~3.3.5",
-    "normalize-css": "~3.0.3",
-    "angular": "~1.4.7"
+    "font-awesome": "~4.4.0",
+    "jquery": "~2.1.4",
+    "normalize-css": "~3.0.3"
   }
 }
