--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "github-crescer-server.js",
   "dependencies": {
     "async": "^1.5.0",
+    "express": "^4.13.3",
     "github": "0.2.3",
     "httpdispatcher": "0.4.0"
   },
