--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "github-crescer-server.js",
   "dependencies": {
     "async": "^1.5.0",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "github": "0.2.3",
-    "httpdispatcher": "0.4.0"
+    "httpdispatcher": "0.4.0",
+    "request": "^2.67.0"
   },
   "devDependencies": {
     "open": "0.0.5",
