--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.13.3",
     "github": "0.2.3",
     "httpdispatcher": "0.4.0",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "open": "0.0.5"
   },
   "devDependencies": {
     "open": "0.0.5",
@@ -17,8 +18,7 @@
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "1.3.3",
-    "gulp": "3.9.1",
-    "open": "0.0.5"
+    "gulp": "3.9.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
