--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gulp": "3.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm install && bower install"
   },
   "repository": {
     "type": "git",
