--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "github": "0.2.3",
     "httpdispatcher": "0.4.0",
     "request": "^2.67.0",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "bower": "1.7.9"
   },
   "devDependencies": {
-    "open": "0.0.5",
     "gulp-minify-css": "1.0.0",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
