--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm install && bower install"
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
