--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "open": "0.0.5",
     "bower": "1.7.9"
   },
+  "engines": {
+    "node": "6.2.2"
+  },
   "devDependencies": {
     "gulp-minify-css": "1.0.0",
     "gulp-plumber": "1.0.0",
