refactor(Auth): criar classe controller para autenticação e passá-la para promises.

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "projeto",
     "crescer"
   ],
-  "homepage": "https://github.com/benhurott/gh-x9",
+  "homepage": "https://github.com/bernardobrezende/gh-x9",
   "moduleType": [],
   "ignore": [
     "**/.*",
