--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd ./src/ && node github-crescer-server.js",
+    "start": "cd ./src/ && node server.js",
     "postinstall": "bower install"
   },
   "repository": {
