--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "description": "GitHub Fork Scouting",
   "main": "github-crescer-server.js",
   "dependencies": {
+    "bower": "1.7.9",
     "cookie-parser": "^1.4.0",
+    "eslint": "^3.1.1",
     "express": "^4.13.3",
     "github": "0.2.3",
     "httpdispatcher": "0.4.0",
-    "request": "^2.67.0",
     "open": "0.0.5",
-    "bower": "1.7.9"
+    "request": "^2.67.0"
   },
   "engines": {
     "node": "6.3.0"
   },
   "devDependencies": {
+    "eslint": "^3.1.1",
+    "eslint-config-google": "^0.6.0",
+    "gulp": "3.9.1",
     "gulp-minify-css": "1.0.0",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "1.3.3",
-    "gulp": "3.9.1"
+    "gulp-sass": "1.3.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
