--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "eslint": "^3.1.1",
     "eslint-config-google": "^0.6.0",
     "gulp": "3.9.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-minify-css": "1.0.0",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "1.3.3"
+    "gulp-sass": "^2.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
