--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "node": "6.3.0"
   },
   "devDependencies": {
+    "gulp": "3.9.1",
     "gulp-minify-css": "1.0.0",
     "gulp-plumber": "1.0.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "1.3.3",
-    "gulp": "3.9.1"
+    "gulp-sass": "^2.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
