--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "bootstrap": "~3.3.5",
     "font-awesome": "~4.4.0",
     "jquery": "~2.1.4",
-    "normalize-css": "~3.0.3"
+    "normalize-css": "~3.0.3",
+    "ngstorage": "^0.3.11"
   }
 }
